--- a/about.html
+++ b/about.html
@@ -12,17 +12,17 @@
     </head>
 
     <body>
-        <div class="mob_navbar_bg"></div>
+        <!-- <div class="mob_navbar_bg"></div> -->
 
-        <div class="header_logo">
+        <!-- <div class="header_logo">
             <a href="./index.html"><img src="./images/Logo.svg" /></a>
-        </div>
+        </div> -->
 
         <div class="navbar">
             <img class="hamburger" src="./images/hamburger.svg" />
-            <a href="./index.html"
+            <!-- <a href="./index.html"
                 ><img class="navbar_logo" src="./images/Logo.svg"
-            /></a>
+            /></a> -->
             <div class="navbar_links">
                 <a href="./index.html">Home</a>
                 <hr />
