--- a/career.html
+++ b/career.html
@@ -11,13 +11,13 @@
         <link rel="stylesheet" href="./sass/index.scss" />
     </head>
     <body>
-        <div class="mob_navbar_bg"></div>
+        <!-- <div class="mob_navbar_bg"></div>
 
         <div class="header_logo">
             <a href="./index.html"><img src="./images/Logo.svg" /></a>
         </div>
 
-        <div class="navbar">
+        <div class="navbar"> -->
             <img class="hamburger" src="./images/hamburger.svg" />
             <a href="./index.html"
                 ><img class="navbar_logo" src="./images/Logo.svg"
