--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
         <title>mslm.io</title>
         <link rel="stylesheet" href="./sass/index.scss" />
     </head>
-    <body>
-        <div class="header_logo">
-            <a href="./index.html"><img src="./images/Logo.svg" /></a>
-        </div>
-
+    <body>/
         <div class="navbar">
             <img class="hamburger" src="./images/hamburger.svg" />
             <a href="./index.html"
